test/attr/attr_inout.code
// RUN: %target-typecheck-verify-language

fn f(x : inout Int) { } // okay

fn h(_ : inout Int) -> (inout Int) -> (inout Int) -> Int { }

fn ff(x: (inout Int, inout Float)) { } //  expected-error 2{{'inout' may only be used on parameters}}

enum inout_carrier {
  case carry(inout Int) // expected-error {{'inout' may only be used on function or initializer parameters}}
}

fn deprecated(inout x: Int) {} // expected-error {{'inout' before a parameter name is not allowed, place it before the parameter type instead}}
